test/fail/verification-implies.mo
// `implies` is a keyword in verification mode only
true implies true;
